Activity log updated

--- a/composer.json
+++ b/composer.json
@@ -11,10 +11,12 @@
         "laravel/tinker": "^2.9",
         "mckenziearts/laravel-notify": "^2.5",
         "realrashid/sweet-alert": "^7.2",
+        "spatie/laravel-activitylog": "^4.8",
         "spatie/laravel-medialibrary": "^11.9",
         "spatie/laravel-permission": "^6.9"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.14",
         "fakerphp/faker": "^1.23",
         "laravel/breeze": "^2.1",
         "laravel/pint": "^1.13",
